# exphone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clickable.yaml  exphone.qrc  testdata.sql  transifex.yml
.github/workflows/: ubuntu-touch.yml
click/: CMakeLists.txt  com.github.jmlich.exphone.desktop  exphone-push-helper.json  exphone-push.apparmor  exphone.apparmor  exphone.desktop  manifest.json.in  run.sh
daemon/: CMakeLists.txt  blockcontroler.cpp  blockcontroler.h  daemon.cpp
daemon/translations/: exphoned.ts  exphoned_ca_ES.ts  exphoned_cs.ts  exphoned_de.ts  exphoned_nl.ts
lib/: CMakeLists.txt  blockitem.cpp  blockmodel.cpp  blockmodel.h  exphoneconfig.cpp  exphoneconfig.h  pushclient.cpp
qml/: exphone.qml
src/: blockcontroler.h  blockitem.h  blockmodel.cpp  blockmodel.h  daemon.cpp  main.cpp
ui/: CMakeLists.txt  exphone.qrc  main.cpp  platform-kirigami.qrc  platform-qtcontrols.qrc  platform-silica.qrc  platform-uuitk.qrc  update-qrc.sh
ui/qml/: exphone.qml
ui/qml/components/platform.kirigami/: StylerPL.qml
ui/qml/components/platform.qtcontrols/: PageMenuItemPL.qml
ui/qml/components/platform.silica/: Cover.qml
ui/qml/components/platform.uuitk/: StylerPL.qml
ui/qml/pages/: EditPage.qml  ListPage.qml  SettingsPage.qml
ui/translations/: exphone.ts  exphone_ca_ES.ts  exphone_cs.ts  exphone_de.ts  exphone_nl.ts
